fixed todo-item elements misaligning on mobile widths

--- a/src/app/components/todo-item/todo-item.component.scss
+++ b/src/app/components/todo-item/todo-item.component.scss
@@ -8,6 +8,7 @@
     line-height: 19px;
     width: 20px;
     text-align: center;
+    flex-shrink: 0;
 
     &:hover{
       background-color: #ff6666;
@@ -22,12 +23,19 @@
     background: white;
     padding: 0.4em 1.5em;
     border-bottom: 1px #ccc dotted;
+    div{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+    }
   }
 
   p{
     display: inline-block;
     text-align: left;
     padding-left: 1.75rem;
+    padding-right: 1rem;
   }
   
   .is-complete {
